# yoto-up

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pi_builder.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: htmx.instructions.md
examples/: using_new_client.py
old/: .gitignore  DESIGN_DECISIONS.md  EXECUTIVE_SUMMARY.md  EXTENDED_TESTING_REPORT.md  IMPLEMENTATION_COMPLETE.md  PLAYLIST_EXTENDED_TEST_REPORT.md  PLAYLIST_FUNCTIONALITY_TEST.md  PLAYLIST_TEST_SUMMARY.md  PRODUCTION_SOLUTION_PARALLELIZATION.md  TESTING_COMPLETE_FINAL_REPORT.md  pyproject.toml
old/.github/: copilot-instructions.md
old/.github/workflows/: build-cross.yml
old/docs/: yoto_api_client.md
old/src/yoto_up/: paths.py  yoto_api.py
old/src/yoto_up_server/: cli.py  container.py  dependencies.py  main.py
src/yoto_up/: models.py  playlist_schema.py  yoto_api_client.py
src/yoto_up/yoto_app/: config.py
src/yoto_up_server/: __init__.py  cli.py  container.py  dependencies.py  logging_config.py  main.py  models.py
src/yoto_up_server/middleware/: session_middleware.py
src/yoto_up_server/routers/: __init__.py  auth.py  cards.py  devices.py  icons.py  playlists.py  upload.py
src/yoto_up_server/services/: __init__.py  api_service.py  audio_processor.py  icon_search_service.py  icon_service.py  session_aware_api_service.py  session_service.py  upload_manager.py  upload_processing_service.py  upload_session_service.py
src/yoto_up_server/templates/: __init__.py  alarms.py  auth.py  base.py  cards.py  components.py  device_detail.py  home.py  htmx_helpers.py  icon_components.py  icons.py  playlist_components.py  playlist_detail_refactored.py  playlists.py  scripts.py  upload.py  upload_components.py
src/yoto_up_server/utils/: alpine.py  sanitation.py  setup_htmx.py
src/yoto_web_server/: __init__.py  cli.py  container.py  dependencies.py  logging_config.py  main.py  models.py  optional_feature_base.py
src/yoto_web_server/api/: __init__.py  auth.py  client.py  config.py  models.py
src/yoto_web_server/core/: config.py  logging.py  normalization.py  waveform_utils.py
src/yoto_web_server/features/: __init__.py  example_feature_b.py
src/yoto_web_server/middleware/: session_middleware.py
src/yoto_web_server/routers/: __init__.py  auth.py  devices.py  icons.py  optional_features.py  playlists.py
src/yoto_web_server/services/: __init__.py  audio_processor.py  icon_search_service.py  mqtt_service.py  optional_features_service.py  session_aware_api_service.py  session_service.py  upload_orchestrator_service.py  upload_processing_service.py  upload_session_service.py
src/yoto_web_server/templates/: __init__.py  advanced_upload_session.py  alarms.py  auth.py  base.py  config_components.py  device_detail.py  devices.py  home.py  htmx_helpers.py  icons.py  (+7 more)
yoto-web-server/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
yoto-web-server/.devcontainer/: devcontainer.json
yoto-web-server/.github/: copilot-instructions.md
(+64 files in other folders)
